# blend

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  LICENSE.TXT  Makefile.am  NOTICE  README.md  blendfile  blendfile2  configure.ac  test.txt
.github/scripts/: check_docs_links.py
.github/workflows/: ci.yml  pages.yml
cmake/: ConfigDefault.cmake  ConfigUserTemplate.cmake  blend-config.cmake.in
cmake/modules/: BlendInstallDirs.cmake
doc/examples/: README.md
doc/examples/agnesi/: agnesi.gp  agnesi.sh
doc/examples/arctan/: arctan.sh  arctan.txt
doc/examples/bartlett/: bartlett.gp
doc/examples/bartletthann/: bartletthann.gp  bartletthann.sh
doc/examples/blackman/: blackman.sh
doc/examples/blackmanharris/: blackmanharris.gp  blackmanharris.sh
doc/examples/blackmannuttall/: blackmannuttall.gp  blackmannuttall.sh
doc/examples/bohman/: bohman.gp  bohman.sh  bohman.txt
doc/examples/boxcar/: boxcar.sh
doc/examples/cauchy/: cauchy.sh  cauchy.txt
doc/examples/circular/: circular.gp  circular.txt
doc/examples/connes/: connes.gp  connes.sh  connes.txt
doc/examples/cosine/: cosine.gp
doc/examples/cubic/: cubic.txt
doc/examples/erf/: erf.gp
doc/examples/ex01/: ex01.c
doc/examples/ex01_api/: ex01_api.sh
doc/examples/ex01_monotone/: README.md  ex01_monotone.gp  ex01_status.txt  south_america_envelope.txt  south_america_monotone.txt  south_america_monotone_plot.txt
doc/examples/ex02_api/: ex02_api.c  ex02_api.gp
doc/examples/ex02_window2d/: ex02_window2d.gp  isotoxal_star.blend  isotoxal_star.txt
doc/examples/ex03/: ex03.c  ex03.gp
doc/examples/ex03_window2d/: ex03_window2d.gp  ex03_window2d.sh  south_america.blend
doc/examples/ex04/: ex04.c  ex04.gp
doc/examples/ex04_api/: ex04_api.c  ex04_api.gp  ex04_api.sh
doc/examples/ex04_window3d/: ex04_window3d.gp  ex04_window3d.sh  south_america.txt
doc/examples/ex05/: ex05.c
doc/examples/ex05_window2d/: decagon.txt  ex05_window2d.gp  heptagon.txt  octagon.txt  pentagon.txt  square.txt  triangle.txt
doc/examples/ex06/: ex06.c  ex06.gp
doc/examples/ex07/: ex07.c  ex07.gp
doc/examples/ex08/: ex08.c
doc/examples/ex09/: ex09.c  ex09.gp
doc/examples/ex10/: ex10.c
doc/examples/ex11/: ex11.c  ex11.gp
doc/examples/ex12/: ex12.c
doc/examples/ex13/: README.md  ex13.gp  ex13.sh  ex13_monotone_best.txt  ex13_monotone_best_plot.txt  ex13_monotone_envelope.txt  fetch_gshhg_reference.sh
doc/examples/exactblackman/: exactblackman.gp  exactblackman.sh
doc/examples/exponential/: exponential.gp  exponential.txt
doc/examples/fejer/: fejer.gp  fejer.sh
doc/examples/flattop/: flattop.gp  flattop.txt
doc/examples/gaussian/: gaussian.gp  gaussian.sh  gaussian.txt
doc/examples/gompertz/: gompertz.txt
doc/examples/hamming/: hamming.txt
doc/examples/hann/: hann.gp  hann.sh
doc/examples/hanningpoisson/: hanningpoisson.gp  hanningpoisson.sh  hanningpoisson.txt
doc/examples/inversemultiquadric/: inversemultiquadric.gp  inversemultiquadric.sh  inversemultiquadric.txt
doc/examples/inversequadratic/: inversequadratic.gp  inversequadratic.sh
doc/examples/kaiser/: kaiser.gp  kaiser.sh  kaiser.txt
doc/examples/kaiserbessel/: kaiserbessel.sh  kaiserbessel.txt
doc/examples/lanczos/: lanczos.gp  lanczos.sh
doc/examples/laplace/: laplace.gp
doc/examples/linear/: linear.sh  linear.txt
doc/examples/logistic/: logistic.gp  logistic.txt
doc/examples/nonic/: nonic.gp  nonic.sh  nonic.txt
doc/examples/nuttall/: nuttall.gp  nuttall.sh
doc/examples/parzen/: parzen.sh  parzen.txt
doc/examples/plancktaper/: plancktaper.gp  plancktaper.sh
doc/examples/poisson/: poisson.gp  poisson.sh
doc/examples/powerlaw/: powerlaw.sh  powerlaw.txt
doc/examples/quadratic/: quadratic.gp  quadratic.txt
doc/examples/quartic/: quartic.gp  quartic.txt
doc/examples/quintic/: quintic.gp  quintic.sh  quintic.txt
doc/examples/riemann/: riemann.gp
doc/examples/riesz/: riesz.gp  riesz.sh
doc/examples/root/: root.gp  root.txt
doc/examples/sech/: sech.gp
doc/examples/sech2/: sech2.sh  sech2.txt
doc/examples/septic/: septic.gp  septic.txt
doc/examples/sine/: sine.gp
doc/examples/smootherstep/: smootherstep.gp  smootherstep.sh
doc/examples/smoothstep/: smoothstep.gp
doc/examples/softsign/: softsign.gp  softsign.sh
doc/examples/student/: student.gp  student.sh  student.txt
doc/examples/tanh/: tanh.gp  tanh.sh
doc/examples/trapezoid/: trapezoid.gp
doc/examples/tukey/: tukey.gp  tukey.sh
doc/examples/welch/: welch.gp  welch.sh
doc/rst/source/: conf.py  index.rst  installation.rst  quickstart.rst
doc/rst/source/_static/: blend.css  blend.js
doc/rst/source/_templates/: breadcrumbs.html  versions.html
doc/rst/source/api/: contribution.rst  index.rst  polygon.rst  reporting.rst  utils.rst  window.rst
doc/rst/source/examples/: index.rst
doc/rst/source/modules/: blend.rst  docs.rst  index.rst  monotone.rst  window1d.rst  window2d.rst  window3d.rst
doc/rst/source/reference/: options.rst  polygons.rst  windows.rst
share/tools/: blend_uninstall.sh.in
src/: Makefile.am  blend.c  blend.h  blend_api.c  blend_api.h  blend_boundary.c  blend_boundary.h  blend_contribution.c  blend_contribution.h  blend_docs.c  blend_error.c  blend_error.h  blend_module.c  blend_module.h  blend_monotone.c  blend_polygon.c  blend_polygon.h  blend_report.c  blend_report.h  blend_simplify.c  blend_utils.c  blend_utils.h  blend_version.h.in  blend_window.c  blend_window.h  blend_window1d.c  blend_window2d.c  blend_window3d.c
test_install/doc/: ChangeLog  LICENSE.TXT
test_install/doc/examples/arctan/: arctan.gp
test_install/doc/examples/barthann/: barthann.gp  barthann.sh  barthann.txt
test_install/doc/examples/bartlett/: bartlett.sh
test_install/doc/examples/blackman/: blackman.gp  (+1 more)
test_install/doc/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js
test_install/include/blend/: blend.h  blend_version.h  blend_window.h
test_install/share/tools/: blend_uninstall.sh
tests/: blend_api_test.c  blend_header_test.c
(+294 files in other folders)
